--- a/tongchuang/css/product.css
+++ b/tongchuang/css/product.css
@@ -3,28 +3,34 @@
 font-weight:normal;min-height: }
 .product .con{width:1200px;margin:0 auto;}
 .product .bg{min-height:900px;}
-.product .bg .con h6{display:inline-block;text-align:center;
-	width:104px;margin:48px 95px 20px 95px;cursor:pointer;}
-.product .bg .con h6 a{font-size:24px;font-family:微软雅黑;
-color:#686360;display:block;height:46px;margin-top:20px;}
-.product .bg .con h6:hover a{color:#e73754;
-	background:url(../images/pro_pn5.png) 30px 26px no-repeat;}
-.product .bg .con h6 i{width: 74px;height:61px;display: block;margin:0 auto;}
-.product .bg .con .timber i{background:url(../images/pro_pn1.png) no-repeat;background-position: center center;}
-.product .bg .con .active i{background:url(../images/pro_pn2.png) no-repeat;background-position: center center;}
-.product .bg .con .wardrobe i{background:url(../images/pro_pn3.png) no-repeat;background-position: center center;}
-.product .bg .con .chairs i{background:url(../images/pro_pn4.png) no-repeat;background-position: center center;}
-.product .bg .con .timber:hover i{background:url(../images/pro_pn11.png) no-repeat;background-position: center center;}
-.product .bg .con .active:hover i{background:url(../images/pro_pn22.png) no-repeat;background-position: center center;}
-.product .bg .con .wardrobe:hover i{background:url(../images/pro_pn33.png) no-repeat;background-position: center center;}
-.product .bg .con .chairs:hover i{background:url(../images/pro_pn44.png) no-repeat;background-position: center center;}
-.product .bg .con .active i{background:url(../images/pro_pn22.png) no-repeat;background-position: center center;}
-.product .bg .con #title h6 a.on{color:#e73754;background:url(../images/pro_pn5.png) 30px 26px no-repeat;}
-.product .bg .con{position: relative;bottom:0px;}
-.product .bg .con ul{position: absolute;display:none;}
-.product .bg .con #cabinet{display: block;}
-.product .bg .con ul li{display:inline-block;}
-.product .bg .con ul li a img{margin:14px;}
+.product .bg .con #menu ul li{display:inline-block;text-align:center;
+	width:104px;margin:48px 95px 0 95px;cursor:pointer;}
+.product .bg .con #menu ul li a{font-size:24px;font-family:微软雅黑;
+color:#686360;display:block;height:46px;margin-top:20px;margin-bottom:12px;}
+.product .bg .con #menu ul li:hover a{color:#e73754;
+	background:url(../images/pro_pn5.png) 32px 28px no-repeat;}
+.product .bg .con #menu ul li.on a{color:#e73754;
+	background:url(../images/pro_pn5.png) 32px 28px no-repeat;}
+
+.product .bg .con #menu ul li:first-child i{background:url(../images/pro_pn1.png) no-repeat;background-position: center center;}
+.product .bg .con #menu ul li:first-child:hover i{background:url(../images/pro_pn11.png) no-repeat;background-position: center center;}
+.product .bg .con #menu ul li:first-child+li i{background:url(../images/pro_pn2.png) no-repeat;background-position: center center;}
+.product .bg .con #menu ul li:first-child+li:hover i{background:url(../images/pro_pn22.png) no-repeat;background-position: center center;}
+.product .bg .con #menu ul li:first-child+li+li i{background:url(../images/pro_pn3.png) no-repeat;background-position: center center;}
+.product .bg .con #menu ul li:first-child+li+li:hover i{background:url(../images/pro_pn33.png) no-repeat;background-position: center center;}
+.product .bg .con #menu ul li:first-child+li+li+li i{background:url(../images/pro_pn4.png) no-repeat;background-position: center center;}
+.product .bg .con #menu ul li:first-child+li+li+li:hover i{background:url(../images/pro_pn44.png) no-repeat;background-position: center center;}
+.product .bg .con #menu ul li i{width: 74px;height:61px;display: block;margin:0 auto;}
+.product .bg .con #menu>ul>li:first-child+li.on>i{background:url(../images/pro_pn22.png) no-repeat;background-position: center center;}
+.product .bg .con #menu>ul>li:first-child.on>i{background:url(../images/pro_pn11.png) no-repeat;background-position: center center;}
+.product .bg .con #menu>ul>li:first-child+li+li.on>i{background:url(../images/pro_pn33.png) no-repeat;background-position: center center;}
+.product .bg .con #menu>ul>li:first-child+li+li+li.on>i{background:url(../images/pro_pn44.png) no-repeat;background-position: center center;}
+
+.product .bg .con #pic{position: relative}
+.product .bg .con #pic ul{position: absolute;display:none;}
+.product .bg .con #pic ul.on{display:block;}
+.product .bg .con #pic ul li {display:inline-block;}
+.product .bg .con #pic ul li a img{margin:14px;}
 
 .page{width:640px;margin:86px auto 130px;clear:both;overflow: hidden;}
 .page .link{float:left;}
